--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -1,30 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+   xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#000"
     android:fitsSystemWindows="true"
     android:id="@+id/base">
 
-    <geq.kaboom.app.kaboot.terminal.termview.TerminalView
-        android:id="@+id/terminal_view"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:titleTextColor="?attr/colorOnPrimary"
+            app:navigationIconTint="?attr/colorOnPrimary"
+            android:background="?attr/colorPrimary"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="3dp"
-        android:layout_marginLeft="3dp"
-        android:layout_above="@id/extra_keys"
-        android:focusableInTouchMode="true"
-        android:scrollbarThumbVertical="@drawable/terminal_scroll_shape"
-        android:scrollbars="vertical"
-        android:importantForAutofill="no"
-        android:autofillHints="password" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <geq.kaboom.app.kaboot.terminal.termview.ExtraKeysView
-        android:id="@+id/extra_keys"
-        style="?android:attr/buttonBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="58dp"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal" />
-</RelativeLayout>
+        <geq.kaboom.app.kaboot.terminal.termview.TerminalView
+            android:id="@+id/terminal_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginRight="3dp"
+            android:layout_marginLeft="3dp"
+            android:focusableInTouchMode="true"
+            android:scrollbarThumbVertical="@drawable/terminal_scroll_shape"
+            android:scrollbars="vertical"
+            android:importantForAutofill="no"
+            android:autofillHints="password" />
+
+        <geq.kaboom.app.kaboot.terminal.termview.ExtraKeysView
+            android:id="@+id/extra_keys"
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:orientation="horizontal"/>
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
