--- a/app/src/main/res/layout/list_pkg.xml
+++ b/app/src/main/res/layout/list_pkg.xml
@@ -19,7 +19,7 @@
         <ImageView
              android:layout_height="30dp"
              android:layout_width="30dp"
-             android:src="@android:drawable/ic_media_play"
+             android:src="@drawable/ic_start"
              android:id="@+id/icon" />
              
         <TextView
