--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,28 +1,18 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="AppTheme" parent="Theme.Material3.Dark">
-    
-    <item name="android:textColorPrimary">#FFFFFF</item>
-    
-        <item name="colorPrimary">#7B1FA2</item>
-        <item name="colorOnPrimary">#FFFFFF</item>
-        <item name="colorPrimaryContainer">#1E1E1E</item>
-        <item name="colorOnPrimaryContainer">#EDE7F6</item>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item name="colorSecondary">#9C27B0</item>
-        <item name="colorOnSecondary">#FFFFFF</item>
-        <item name="colorSecondaryContainer">#6A1B9A</item>
-        <item name="colorOnSecondaryContainer">#F3E5F5</item>
+    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
 
-        <item name="android:colorBackground">#121212</item>
-        <item name="colorSurface">#1E1E1E</item>
-        <item name="colorOnSurface">#EDE7F6</item>
-
-        <item name="colorTertiary">#BA68C8</item>
-        <item name="colorOnTertiary">#FFFFFF</item> 
-
-        <item name="android:statusBarColor">#261E29</item>
-        <item name="android:navigationBarColor">#1E1E1E</item>
-
-        <item name="android:forceDarkAllowed">false</item>
+        <item name="colorPrimary">#1F1F1F</item> <!--Toolbar-->
+        <item name="colorOnPrimary">#FFFFFF</item> <!--Toolbar Title-->
+        <item name="colorPrimaryContainer">#2C2C2C</item> <!--Floating Button-->
+        <item name="colorOnPrimaryContainer">#FFFFFF</item> <!--Floating Button Color-->
+        <item name="colorSurface">#121212</item> <!--CardView and AlertDialog-->
+        <item name="colorOnSurface">#FFFFFF</item> <!--AlertView Title-->
+        <item name="colorOnSurfaceVariant">#FFFFFF</item> <!-- AlertView Color-->
+        <item name="android:colorBackground">#121212</item> <!--Background-->
+        <item name="android:statusBarColor">?attr/colorPrimary</item> <!--Status Bar-->
+        <item name="android:navigationBarColor">?attr/colorSurface</item> <!--Navigation Bar-->
+        <item name="android:textColor">#FFFFFF</item> <!--TextColot-->
     </style>
 </resources>
