--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -4,7 +4,6 @@
    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
     android:fitsSystemWindows="true"
     android:id="@+id/base">
 
@@ -17,9 +16,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="?attr/colorOnPrimary"
-            app:navigationIconTint="?attr/colorOnPrimary"
-            android:background="?attr/colorPrimary"/>
+            app:titleTextColor="?attr/colorPrimary"
+            android:background="?attr/android:statusBarColor"/>
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
