--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -6,4 +6,11 @@
         android:icon="@drawable/ic_processes"
         android:title="Running Processes"
         app:showAsAction="always" />
+        
+       
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_settings"
+        android:title="Settings"
+        app:showAsAction="always" />
 </menu>
