--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:titleTextColor="?attr/colorPrimary"
+            app:title="Home"
             android:background="?attr/android:statusBarColor"/>
     </com.google.android.material.appbar.AppBarLayout>
 
