--- a/app/src/main/res/layout/install_pkg.xml
+++ b/app/src/main/res/layout/install_pkg.xml
@@ -5,7 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_margin="8dp"
+    android:layout_marginTop="8dp"
+     android:layout_marginBottom="8dp"
+     android:layout_marginLeft="5dp"
+     android:layout_marginRight="5dp"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
