--- a/app/src/main/res/layout/install_pkg.xml
+++ b/app/src/main/res/layout/install_pkg.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginTop="8dp"
-     android:layout_marginBottom="8dp"
+    android:layout_marginTop="4dp"
+     android:layout_marginBottom="4dp"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
     app:cardCornerRadius="10dp">
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="center_horizontal|center_vertical"
-        android:padding="8dp"
+        android:padding="5dp"
         android:orientation="vertical">
 
             <TextView
@@ -43,6 +43,7 @@
                 android:focusable="false"
                 android:id="@+id/prog" />
             <TextView
+                android:text="/"
                 android:singleLine="true"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
