added settings again

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,11 +9,10 @@
         <item name="android:colorBackground">#101010</item>
         <item name="android:statusBarColor">#191919</item>
         
-        <item name="colorOnPrimaryContainer">?attr/android:textColorPrimary</item>
+        <item name="colorOnPrimaryContainer">?attr/android:textColor</item>
         <item name="android:navigationBarColor">?attr/android:colorBackground</item>
         <item name="colorOnSurface">?attr/android:textColor</item>
         <item name="colorOnSurfaceVariant">?attr/android:textColor</item>
         <item name="elevationOverlayEnabled">false</item>
-        <item name="android:fontFamily">@font/font</item>
     </style>
 </resources>
