added settings again

--- a/app/src/main/res/layout/list_pkg.xml
+++ b/app/src/main/res/layout/list_pkg.xml
@@ -41,6 +41,7 @@
              android:textSize="10sp"
              android:focusable="false"
              android:id="@+id/size"
+             android:visibility="gone"
              android:textStyle="bold" />
 </LinearLayout>
 
