Images Updated and multi sessio setup started

--- a/app/src/main/res/drawable/ic_settings.xml
+++ b/app/src/main/res/drawable/ic_settings.xml
@@ -1,9 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<vector
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="28dp"
+        android:height="28dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94s-0.02,-0.64 -0.06,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.4 0.12,-0.61l-1.92,-3.32c-0.11,-0.2 -0.36,-0.28 -0.58,-0.22l-2.39,0.96c-0.5,-0.38 -1.05,-0.7 -1.66,-0.94L14.5,2.5c-0.03,-0.22 -0.22,-0.39 -0.45,-0.39h-4.1c-0.23,0 -0.42,0.16 -0.45,0.39l-0.36,2.45c-0.61,0.24 -1.17,0.56 -1.66,0.94l-2.39,-0.96c-0.22,-0.06 -0.47,0.02 -0.58,0.22l-1.92,3.32c-0.11,0.21 -0.06,0.47 0.12,0.61l2.03,1.58c-0.04,0.3 -0.06,0.61 -0.06,0.94s0.02,0.64 0.06,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.4 -0.12,0.61l1.92,3.32c0.11,0.2 0.36,0.28 0.58,0.22l2.39,-0.96c0.5,0.38 1.05,0.7 1.66,0.94l0.36,2.45c0.03,0.22 0.22,0.39 0.45,0.39h4.1c0.23,0 0.42,-0.16 0.45,-0.39l0.36,-2.45c0.61,-0.24 1.17,-0.56 1.66,-0.94l2.39,0.96c0.22,0.06 0.47,-0.02 0.58,-0.22l1.92,-3.32c0.11,-0.21 0.06,-0.47 -0.12,-0.61l-2.03,-1.58zM12,15.5c-1.93,0 -3.5,-1.57 -3.5,-3.5s1.57,-3.5 3.5,-3.5 3.5,1.57 3.5,3.5 -1.57,3.5 -3.5,3.5z"/>
+            android:pathData="M19.5 12c0-.23-.01-.45-.03-.68l1.86-1.41c.4-.3.51-.86.26-1.3l-1.87-3.23a.987.987 0 0 0-1.25-.42l-2.15.91c-.37-.26-.76-.49-1.17-.68l-.29-2.31c-.06-.5-.49-.88-.99-.88h-3.73c-.51 0-.94.38-1 .88l-.29 2.31c-.41.19-.8.42-1.17.68l-2.15-.91c-.46-.2-1-.02-1.25.42L2.41 8.62c-.25.44-.14.99.26 1.3l1.86 1.41a7.343 7.343 0 0 0 0 1.35l-1.86 1.41c-.4.3-.51.86-.26 1.3l1.87 3.23c.25.44.79.62 1.25.42l2.15-.91c.37.26.76.49 1.17.68l.29 2.31c.06.5.49.88.99.88h3.73c.5 0 .93-.38.99-.88l.29-2.31c.41-.19.8-.42 1.17-.68l2.15.91c.46.2 1 .02 1.25-.42l1.87-3.23c.25-.44.14-.99-.26-1.3l-1.86-1.41c.03-.23.04-.45.04-.68zm-7.46 3.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5s3.5 1.57 3.5 3.5s-1.57 3.5-3.5 3.5z"
+            android:fillColor="#FFFFFF" />
 </vector>
