--- a/app/src/main/res/drawable/ic_desc.xml
+++ b/app/src/main/res/drawable/ic_desc.xml
@@ -1,15 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="225"
-    android:viewportHeight="225">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<vector
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="28dp"
+        android:height="28dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
     <path
-        android:pathData="M104.5 9L128.5 10L150.5 16Q173.5 25.5 189 42.5Q201.5 56 209 74.5L215 96.5L216 120.5L215 121.5L215 128.5L213 138.5L207 155.5Q197.6 175.1 182.5 189Q169 201.5 150.5 209L128.5 215L104.5 216L103.5 215L96.5 215L86.5 213L69.5 207Q49.3 197.2 35 181.5Q23.3 168.2 16 150.5L10 128.5L9 103.5L12 86.5L18 69.5Q27.4 49.9 42.5 36Q53.5 26 67.5 19L86.5 12L96.5 10L103.5 10L104.5 9ZM102 18L87 21L76 25L54 38Q25 59 18 102L18 124L21 139Q27 158 39 173Q60 200 102 207L124 207L139 204Q158 198 173 186Q200 165 207 124L207 102L204 87Q198 67 186 53Q172 35 150 25L139 21L124 18L102 18Z"
-        android:fillColor="#FFFFFF"/>
-    <path
-        android:pathData="M119.5 61L126.5 61L134 66.5L136 73.5L135 77.5L129.5 83Q126 85.5 118.5 84L111 78.5L110 69.5L116.5 62L119.5 61Z"
-        android:fillColor="#FFFFFF"/>
-    <path
-        android:pathData="M106.5 96Q121.5 94.5 126 103.5L127 113.5L119 140.5L118 150.5L121.5 155Q130.4 156.3 134 154L133 159L117.5 164L108.5 164Q101.5 162.4 98 157.5L96 148.5L105 115.5L105 108.5L104 106Q100.7 103.9 92.5 105L89.5 106L90 104.5Q88.3 99.7 92.5 101L106.5 96Z"
-        android:fillColor="#FFFFFF"/>
+            android:pathData="M11.5 2C6.81 2 3 5.81 3 10.5S6.81 19 11.5 19h.5v3c4.86-2.34 8-7 8-11.5C20 5.81 16.19 2 11.5 2zm1 14.5h-2v-2h2v2zm.4-4.78c-.01.01-.02.03-.03.05c-.05.08-.1.16-.14.24c-.02.03-.03.07-.04.11c-.03.07-.06.14-.08.21c-.07.21-.1.43-.1.68H10.5c0-.51.08-.94.2-1.3c0-.01 0-.02.01-.03c.01-.04.04-.06.05-.1c.06-.16.13-.3.22-.44c.03-.05.07-.1.1-.15c.03-.04.05-.09.08-.12l.01.01c.84-1.1 2.21-1.44 2.32-2.68c.09-.98-.61-1.93-1.57-2.13c-1.04-.22-1.98.39-2.3 1.28c-.14.36-.47.65-.88.65h-.2c-.6 0-1.04-.59-.87-1.17a4.002 4.002 0 0 1 4.43-2.79c1.69.25 3.04 1.64 3.33 3.33c.44 2.44-1.63 3.03-2.53 4.35z"
+            android:fillColor="#FFFFFF" />
 </vector>
