--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:titleTextColor="?attr/colorPrimary"
+            app:navigationIcon="@drawable/ic_terminate"
             android:background="?attr/android:statusBarColor"/>
     </com.google.android.material.appbar.AppBarLayout>
 
