--- a/app/src/main/res/layout/list_pkg.xml
+++ b/app/src/main/res/layout/list_pkg.xml
@@ -21,10 +21,11 @@
         <ImageView
              android:layout_height="30dp"
              android:layout_width="30dp"
-             android:src="@drawable/ic_start"
+             android:src="@drawable/ic_terminal"
              android:id="@+id/icon" />
              
         <TextView
+             android:layout_marginLeft="5dp"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="5dp"
