--- a/app/src/main/res/layout/list_pkg.xml
+++ b/app/src/main/res/layout/list_pkg.xml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
-     xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:app="http://schemas.android.com/apk/res-auto"
-     xmlns:tools="http://schemas.android.com/tools"
-     android:layout_height="wrap_content"
-     android:layout_width="match_parent"
-     android:layout_marginTop="4dp"
-     android:layout_marginBottom="4dp"
-     android:layout_marginLeft="5dp"
-     android:layout_marginRight="5dp"
-     app:cardCornerRadius="20dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_marginTop="@dimen/_4sdp"
+    android:layout_marginBottom="@dimen/_4sdp"
+    android:layout_marginLeft="@dimen/_5sdp"
+    android:layout_marginRight="@dimen/_5sdp"
+    app:cardCornerRadius="@dimen/_20sdp">
 
     <LinearLayout
-         android:layout_height="wrap_content"
-         android:layout_width="match_parent"
-         android:gravity="center_horizontal|center_vertical"
-         android:padding="10dp"
-         android:id="@+id/base">
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal|center_vertical"
+        android:padding="@dimen/_10sdp"
+        android:id="@+id/base">
 
         <ImageView
-             android:layout_height="30dp"
-             android:layout_width="30dp"
-             android:src="@drawable/ic_terminal"
-             android:id="@+id/icon" />
-             
+            android:layout_height="@dimen/_30sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:src="@drawable/ic_terminal"
+            android:id="@+id/icon" />
+
         <TextView
-             android:layout_marginLeft="5dp"
-             android:layout_height="wrap_content"
-             android:layout_width="match_parent"
-             android:padding="5dp"
-             android:textSize="22sp"
-             android:focusable="false"
-             android:layout_weight="1"
-             android:id="@+id/name"
-             android:text="Name"
-             android:textStyle="bold" />
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:padding="@dimen/_5sdp"
+            android:textSize="@dimen/_22ssp"
+            android:focusable="false"
+            android:layout_weight="1"
+            android:id="@+id/name"
+            android:text="Name"
+            android:textStyle="bold" />
+
         <TextView
-             android:layout_height="wrap_content"
-             android:layout_width="wrap_content"
-             android:padding="5dp"
-             android:textSize="10sp"
-             android:focusable="false"
-             android:id="@+id/size"
-             android:visibility="gone"
-             android:textStyle="bold" />
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:padding="@dimen/_5sdp"
+            android:textSize="@dimen/_10ssp"
+            android:focusable="false"
+            android:id="@+id/size"
+            android:visibility="gone"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
