--- a/app/src/main/res/layout/list_setting.xml
+++ b/app/src/main/res/layout/list_setting.xml
@@ -2,10 +2,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_16sdp"
-    android:layout_margin="@dimen/_1sdp"
+    android:padding="@dimen/_10sdp"
+    android:layout_margin="@dimen/_2sdp"
     android:gravity="start|center_vertical"
-    android:background="?attr/colorSurface">
+    android:background="@drawable/tile">
 
     <TextView
         android:id="@+id/title"
@@ -14,7 +14,7 @@
         android:textStyle="bold"
         android:textSize="@dimen/_14ssp"
         android:textColor="?android:textColorPrimary"
-        android:layout_marginBottom="@dimen/_4sdp" />
+        android:layout_marginBottom="@dimen/_2sdp" />
 
     <TextView
         android:id="@+id/description"
