--- a/app/src/main/res/layout/install_pkg.xml
+++ b/app/src/main/res/layout/install_pkg.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
@@ -9,64 +8,59 @@
     android:layout_marginBottom="@dimen/_4sdp"
     android:layout_marginLeft="@dimen/_5sdp"
     android:layout_marginRight="@dimen/_5sdp"
-    app:cardCornerRadius="@dimen/_10sdp">
+    android:padding="@dimen/_5sdp"
+    android:orientation="vertical"
+    android:background="@drawable/tile">
 
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="@dimen/_5sdp"
-        android:orientation="vertical">
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <ImageView
+            android:layout_height="@dimen/_30sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:src="@drawable/ic_pkg" />
+
+        <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:orientation="horizontal">
-            
-            <ImageView
-                android:layout_height="@dimen/_30sdp"
-                android:layout_width="@dimen/_30sdp"
-                android:src="@drawable/ic_pkg" />
+            android:padding="@dimen/_8sdp"
+            android:textSize="@dimen/_20ssp"
+            android:focusable="false"
+            android:layout_weight="1"
+            android:id="@+id/name"
+            android:text="Name"
+            android:textStyle="bold" />
 
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:padding="@dimen/_8sdp"
-                android:textSize="@dimen/_20ssp"
-                android:focusable="false"
-                android:layout_weight="1"
-                android:id="@+id/name"
-                android:text="Name"
-                android:textStyle="bold" />
-                
-               <ImageView
-                android:layout_height="@dimen/_30sdp"
-                android:layout_width="@dimen/_30sdp"
-                android:id="@+id/desc"
-                android:src="@drawable/ic_desc" /> 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
-
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:indeterminate="false"
-                android:padding="@dimen/_8sdp"
-                android:focusable="false"
-                android:visibility="gone"
-                android:id="@+id/prog" />
-            <TextView
-                android:text="/"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:textSize="@dimen/_12sdp"
-                android:visibility="gone"
-                android:id="@+id/log" />
-        </LinearLayout>
-
+        <ImageView
+            android:layout_height="@dimen/_30sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:id="@+id/desc"
+            android:src="@drawable/ic_desc" />
     </LinearLayout>
 
-</com.google.android.material.card.MaterialCardView>
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:indeterminate="false"
+            android:padding="@dimen/_8sdp"
+            android:focusable="false"
+            android:visibility="gone"
+            android:id="@+id/prog" />
+
+        <TextView
+            android:text="/"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:textSize="@dimen/_8ssp"
+            android:visibility="gone"
+            android:id="@+id/log" />
+    </LinearLayout>
+
+</LinearLayout>
