--- a/app/src/main/res/layout/list_pkg.xml
+++ b/app/src/main/res/layout/list_pkg.xml
@@ -1,50 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginTop="@dimen/_4sdp"
-    android:layout_marginBottom="@dimen/_4sdp"
+    android:layout_marginTop="@dimen/_2sdp"
+    android:layout_marginBottom="@dimen/_2sdp"
     android:layout_marginLeft="@dimen/_5sdp"
     android:layout_marginRight="@dimen/_5sdp"
-    app:cardCornerRadius="@dimen/_20sdp">
+    android:gravity="center_horizontal|center_vertical"
+    android:padding="@dimen/_8sdp"
+    android:id="@+id/base"
+    android:orientation="horizontal"
+    android:background="@drawable/tile">
 
-    <LinearLayout
+    <ImageView
+        android:layout_height="@dimen/_30sdp"
+        android:layout_width="@dimen/_30sdp"
+        android:src="@drawable/ic_terminal"
+        android:id="@+id/icon" />
+
+    <TextView
+        android:layout_marginLeft="@dimen/_5sdp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:gravity="center_horizontal|center_vertical"
-        android:padding="@dimen/_10sdp"
-        android:id="@+id/base">
+        android:padding="@dimen/_5sdp"
+        android:textSize="@dimen/_21ssp"
+        android:focusable="false"
+        android:layout_weight="1"
+        android:id="@+id/name"
+        android:text="Name"
+        android:textStyle="bold" />
 
-        <ImageView
-            android:layout_height="@dimen/_30sdp"
-            android:layout_width="@dimen/_30sdp"
-            android:src="@drawable/ic_terminal"
-            android:id="@+id/icon" />
-
-        <TextView
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:padding="@dimen/_5sdp"
-            android:textSize="@dimen/_22ssp"
-            android:focusable="false"
-            android:layout_weight="1"
-            android:id="@+id/name"
-            android:text="Name"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:padding="@dimen/_5sdp"
-            android:textSize="@dimen/_10ssp"
-            android:focusable="false"
-            android:id="@+id/size"
-            android:visibility="gone"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-</com.google.android.material.card.MaterialCardView>
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:padding="@dimen/_5sdp"
+        android:textSize="@dimen/_8ssp"
+        android:focusable="false"
+        android:id="@+id/size"
+        android:visibility="gone"
+        android:textStyle="bold" />
+</LinearLayout>
