--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,24 +1,27 @@
-<resources xmlns:tools="http://schemas.android.com/tools"
+<resources
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="colorPrimary">#FFFFFF</item>
-        <item name="colorPrimaryContainer">#1B1B1B</item>
-        <item name="colorSurface">#1C1C1C</item>
-        <item name="android:textColor">#EEEEEE</item>
-        <item name="android:colorBackground">#101010</item>
-        <item name="android:statusBarColor">#191919</item>
-        
-        <item name="colorOnPrimaryContainer">?attr/android:textColor</item>
-        <item name="android:navigationBarColor">?attr/android:colorBackground</item>
-        <item name="colorOnSurface">?attr/android:textColor</item>
-        <item name="colorOnSurfaceVariant">?attr/android:textColor</item>
+    <style
+        name="AppTheme"
+        parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/title</item>
+        <item name="colorPrimaryContainer">@color/fabBg</item>
+        <item name="colorSurface">@color/dialogBg</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:colorBackground">@color/bg</item>
+        <item name="android:statusBarColor">@color/statusBg</item>
+
+        <item name="colorOnPrimaryContainer">@color/text</item>
+        <item name="android:navigationBarColor">@color/bg</item>
+        <item name="colorOnSurface">@color/text</item>
+        <item name="colorOnSurfaceVariant">@color/text</item>
         <item name="elevationOverlayEnabled">false</item>
-       <item name="android:windowAnimationStyle">@style/AppWindowAnimation</item>
+        <item name="android:windowAnimationStyle">@style/AppWindowAnimation</item>
     </style>
-    
-   <style name="AppWindowAnimation">
-    <item name="android:activityOpenEnterAnimation">@anim/slide_in_bottom</item>
-    <item name="android:activityCloseExitAnimation">@anim/slide_out_bottom</item>
-</style>
+
+    <style name="AppWindowAnimation">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_out_bottom</item>
+    </style>
 </resources>
