--- a/app/src/main/res/anim/slide_out_bottom.xml
+++ b/app/src/main/res/anim/slide_out_bottom.xml
@@ -1,3 +1,4 @@
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromYDelta="0%" android:toYDelta="100%"
-    android:duration="300" />
+    android:duration="300"
+    android:interpolator="@android:anim/decelerate_interpolator" />
