--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
     </style>
 
     <style name="AppWindowAnimation">
-        <item name="android:activityOpenEnterAnimation">@anim/slide_in_bottom</item>
-        <item name="android:activityCloseExitAnimation">@anim/slide_out_bottom</item>
+        <item name="android:activityOpenEnterAnimation">@anim/anim_start</item>
+        <item name="android:activityCloseExitAnimation">@anim/anim_end</item>
     </style>
 </resources>
