--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="?attr/colorPrimary"
-            app:title="Home"
-            android:background="@color/statusBg"/>
+            app:title="Home"/>
     </com.google.android.material.appbar.AppBarLayout>
 
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -43,18 +41,19 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:paddingTop="@dimen/_2sdp"
+            android:paddingTop="@dimen/_4sdp"
             android:paddingBottom="@dimen/_2sdp"
             android:id="@+id/list" />
 
     </FrameLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:src="@drawable/ic_download"
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        app:icon="@drawable/ic_download"
         android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_margin="@dimen/_30sdp"
+        android:layout_margin="@dimen/_16sdp"
+        android:text="New package"
         android:id="@+id/install"
         android:layout_gravity="right|bottom" />
 
