--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,15 +15,13 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:titleTextColor="?attr/colorPrimary"
             app:title="Settings"
-            app:navigationIcon="@drawable/ic_terminate"
-            android:background="@color/statusBg"/>
+            app:navigationIcon="@drawable/ic_terminate"/>
     </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="?attr/actionBarSize"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:padding="@dimen/_4sdp"
             android:paddingTop="@dimen/_2sdp"
