--- a/app/src/main/res/layout/install_pkg.xml
+++ b/app/src/main/res/layout/install_pkg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
@@ -7,11 +7,15 @@
     android:layout_marginTop="@dimen/_4sdp"
     android:layout_marginBottom="@dimen/_4sdp"
     android:layout_marginLeft="@dimen/_5sdp"
-    android:layout_marginRight="@dimen/_5sdp"
-    android:padding="@dimen/_4sdp"
-    android:orientation="vertical"
-    android:background="@drawable/tile">
-
+    android:layout_marginRight="@dimen/_5sdp">
+    
+     <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+       android:padding="@dimen/_6sdp"
+       android:gravity="center_vertical"
+       android:orientation="vertical">
+        
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -62,5 +66,5 @@
             android:visibility="gone"
             android:id="@+id/log" />
     </LinearLayout>
-
 </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
