--- a/app/src/main/res/layout/list_pkg.xml
+++ b/app/src/main/res/layout/list_pkg.xml
@@ -1,43 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/_2sdp"
     android:layout_marginBottom="@dimen/_2sdp"
     android:layout_marginLeft="@dimen/_5sdp"
     android:layout_marginRight="@dimen/_5sdp"
-    android:gravity="center_horizontal|center_vertical"
-    android:padding="@dimen/_8sdp"
     android:id="@+id/base"
-    android:orientation="horizontal"
-    android:background="@drawable/tile">
+    android:clickable="true"
+    android:focusable="true">
 
-    <ImageView
-        android:layout_height="@dimen/_30sdp"
-        android:layout_width="@dimen/_30sdp"
-        android:src="@drawable/ic_terminal"
-        android:id="@+id/icon" />
-
-    <TextView
-        android:layout_height="wrap_content"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:padding="@dimen/_5sdp"
-        android:textSize="@dimen/_22ssp"
-        android:focusable="false"
-        android:layout_weight="1"
-        android:id="@+id/name"
-        android:text="Name"
-        android:textStyle="bold" />
-
-    <TextView
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:padding="@dimen/_5sdp"
-        android:textSize="@dimen/_8ssp"
-        android:focusable="false"
-        android:id="@+id/size"
-        android:visibility="gone"
-        android:textStyle="bold" />
-</LinearLayout>
+        android:padding="@dimen/_6sdp"  
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_terminal" />
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingStart="@dimen/_5sdp"
+            android:textSize="@dimen/_22ssp"
+            android:text="Name"
+            android:textStyle="bold"
+            android:focusable="false" />
+
+        <TextView
+            android:id="@+id/size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/_5sdp"
+            android:textSize="@dimen/_8ssp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:focusable="false" />
+
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
